run idea from gradle script