@@ -92,6 +92,21 @@ task extractIdea(type: Copy) {
 compileKotlin.dependsOn(extractIdea)
 compileJava.dependsOn(extractIdea)
 
+task runIdeaWithPlugin(type: JavaExec, dependsOn: assemble) {
+    main = 'com.intellij.idea.Main'
+    workingDir = rootDir
+
+    jvmArgs "-ea", "-Xmx800m", "-XX:ReservedCodeCacheSize=64m", "-XX:MaxPermSize=250m", "-XX:+HeapDumpOnOutOfMemoryError"
+    systemProperty "idea.is.internal", "true"
+    systemProperty "idea.debug.mode", "true"
+    systemProperty "idea.system.path", file("$buildDir/idea-home/system")
+    systemProperty "idea.config.path", file("$buildDir/idea-home/config")
+    systemProperty "plugin.path", file("$buildDir/distributions/CloudFormation.zip")
+
+    classpath sourceSets.main.runtimeClasspath
+    classpath fileTree(dir: "${System.properties['java.home']}/../lib", include: '*tools.jar')
+}
+
 task zip(type: Zip) {
     baseName 'CloudFormation'
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
